--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@ header {
   flex-direction: row;
   gap: 2rem;
 }
-
-img {
+header img {
   width: 70px;
+}
+
+.construction {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
