--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,14 @@ header {
     display: flex;
     flex-direction: row;
     gap: 2rem;
+
+    img {
+        width: 70px;
+    }
 }
-img {
-    width: 70px;
+
+.construction {
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
 }
