updates ppl updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
-  font-family: Jost;
-  margin: 1rem;
-  padding: 0;
+  padding: none;
+  margin: none;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10rem;
+  margin-top: 25%;
+}
+.buttons a {
+  padding: 2rem;
+  background-color: rgb(201, 201, 201);
+  border-color: rgb(82, 82, 82);
+  border-radius: 15px;
+  border-style: outset;
   text-decoration: none;
-  background-image: url("/assets/images/grupp.jpg");
-  background-repeat: no-repeat;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
