--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,4 +19,8 @@
         text-decoration: none;
         color: white;
     }
+    a:hover {
+        transform: scale(1.05);
+        transition: 0.3s;
+    }
 }
