fräschar upp lite :)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: url("/assets/images/nti.JPG");
+    background-image: url("/assets/images/alvin.JPEG");
     background-size: cover;
     background-position: center 0% 0% center;
     background-repeat: repeat repeat no-repeat;
